Styled scrollbar on webkit browser and fixed blog post margins

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Cabin:700|Open+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cabin:700|Open+Sans:400,700,900&display=swap');
 
 @import '../styles/colors';
 @import '../styles/animation';
@@ -6,6 +6,27 @@
 ::selection {
   color: white;
   background: $primary;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 10px $grey;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: $primary;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $primary-darker;
 }
 
 h1,
